Fixed a bug on Firefox and the jquery that wasn't setting the tag data with innerText.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,7 +39,7 @@ body {
 	margin: 5px;
 	clear: left;
 	float: left;
-	height: auto;
+	height: 54px;
 	width: 506px;
 	background-color: #EEE;
 	border: thin solid #000;
@@ -56,6 +56,7 @@ body {
 
 #scroller{
 	width: 506px;
+	height: 54px;
     overflow: scroll;
     overflow-y: hidden;
     -ms-overflow-y: hidden;
